Cyberduck
https://cyberduck.io/

7.2.2
- [Bugfix] Crash opening connection (macOS 10.[9-11]) (#10892)

7.2.1
- [Bugfix] Failure to open application on Windows 7+ (Windows)

7.2.0
- [Bugfix] Failure validating hostname when connecting through HTTP proxy
- [Bugfix] MD5 mismatch error for uploads (Alibaba Cloud Object Storage Service) (#10879)
- [Bugfix] Deprecated path-style request usage for (AWS GovCloud) (#10824)
- [Bugfix] Default to use virtual hosted style to access bucket contents for third party S3 providers
- [Bugfix] Optimize MD5 checksum calculation (S3) (#10278)
- [Bugfix] Reload directory contents after editing file
- [Bugfix] Failure replacing objects with blob type set to block (Azure)

7.1.2
- [Bugfix] Folder showing no more than 1000 files (S3) (#10811)
- [Bugfix] Failure deleting folder recursively (FTP)

7.1.1
- [Bugfix] Failure authenticating using SSH agent (SFTP) (#10800)
- [Bugfix] Failure overwriting existing file (Google Storage)
- [Bugfix] Missing hostname verification in TLS handshake when connecting through HTTP proxy

7.1.0
- [Feature] Application running as 64-bit (Windows)
- [Feature] Application package is notarized (macOS)
- [Feature] Support for storage classes (Google Storage)
- [Feature] Support to select region (eu, us, asia) for new buckets (Google Storage)
- [Feature] Support to set lifecycle configuration on bucket (Google Storage)
- [Feature] Support for me-south-1 (Bahrain) region (S3)
- [Bugfix] Number of buckets displayed in browser limited to 1000 (Google Storage)
- [Bugfix] Fails to authenticate where keyboard-interactive mechanism is not supported (SFTP) (#10714)
- [Bugfix] Errors accessing Cryptomator vault (Google Drive, OneDrive)
- [Bugfix] No route to host error with IPv6 only server (macOS)
- [Bugfix] Allow to access files with non printable characters in key name (S3)
- [Bugfix] Use AWS4 signature for pre-signed URLs for AWS in region us-east-1 (S3)
- [Bugfix] Rate limit number of requests (Google Drive) (#10103)