@@ -61,8 +61,14 @@
     <a target="_blank" href="https://trac.cyberduck.io/milestone/7.2.2"><strong>Version 7.2.2</strong></a>
 </p>
 <ul>
-    <li><span class="label label-warning">Bugfix</span> Crash opening connection (macOS 10.[9-11]) (<a target="_blank"
-                                                                                                       href="https://trac.cyberduck.io/ticket/10892">#10892</a>)
+    <li><span class="label label-warning">Bugfix</span> Crash opening connection (macOS 10.[9-11]) (
+        <a target="_blank" href="https://trac.cyberduck.io/ticket/10892">#10892</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Interoperability with providers only supporting path-style
+        requests (S3) (<a target="_blank" href="https://trac.cyberduck.io/ticket/10888">#10888</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Display certificates as sheet in browser window (macOS) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/10897">#10897</a>)
     </li>
 </ul>
 
