@@ -3,6 +3,8 @@ https://cyberduck.io/
 
 7.2.2
 - [Bugfix] Crash opening connection (macOS 10.[9-11]) (#10892)
+- [Bugfix] Interoperability with providers only supporting path-style requests (S3) (#10888)
+- [Bugfix] Display certificates as sheet in browser window (macOS) (#10897)
 
 7.2.1
 - [Bugfix] Failure to open application on Windows 7+ (Windows)
